# CTLabs

Algo/Sem1/: 1A.cpp  1B.py  1E.py  2A.py  2B.py  2C.cpp  3A.cpp  3A.py  3B.py  3C.py  3G.py  Задачи - Codeforces.html
Algo/Sem2/: 1A.py  1B.py  1C.cpp  1D.cpp  1E.cpp  1G.cpp  1H.cpp  1K.cpp  1L.cpp  1M.cpp  1N.cpp  2A.cpp  2B.cpp  2C.cpp  2D.cpp  2F.cpp  3A.h  6D.cpp  7A.cpp  8B.java  8E.java  Задачи - Codeforces.html
C-Cpp/HW/ct-c24-hw-quaternion-Killka17-main/: quat.hpp
C-Cpp/Labs/ct-c24-lw-floating-point-Killka17-main/: CMakeLists.txt  main.c
C-Cpp/Labs/ct-c24-lw-libraries-Killka17-main/: CMakeLists.txt  main.c  myFfmpeg.c  myFfmpeg.h  myFftw.c  myFftw.h
C-Cpp/Labs/ct-c24-lw-minesweeper-Killka17-main/: Board.cpp  Lab4.pro  board.h  cell.cpp  cell.h  gameState.ini  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
paradigms/clojure-solutions/: linear.clj
paradigms/java-solutions/queue/: AbstractQueue.java  ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  LinkedQueue.java  MyQueueTest.java  Queue.java
paradigms/javascript-solutions/: functionalExpression.js  objectExpression.js
paradigms/prolog-solutions/: expression.pl  primes.pl
prog-intro/java-solutions/: MyScanner.java  Reverse.java  ReverseMinC.java  ReverseMinCAbc.java  Sum.java  SumDoubleSpace.java  WordStatCount.java  WordStatInput.java  Wspp.java  WsppSortedPosition.java
prog-intro/qf-solutions/: A_1.java  B_1.java  I_1.java  I_2.java  I_3.java  I_4.java  I_5.java  I_6.java  I_7.java  I_8.java  J_1.java  J_2.java  J_3.java  J_4.java  M_1.java  M_2.java  M_3.java  M_4.java
(+74 files in other folders)
